Stop the logo from being too small on smaller screens
Refs #1767

--- a/assets/style.css
+++ b/assets/style.css
@@ -260,6 +260,8 @@ body {
 
 .header {
   display: flex;
+  flex-wrap: wrap;
+  row-gap: var(--space-2xs);
   align-items: center;
   justify-content: space-between;
   max-inline-size: 75rem;
@@ -609,7 +611,6 @@ h6 {
   nav > & {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-end;
     margin-block-start: 0;
     padding-inline-start: 0;
     column-gap: var(--space-xs-m);
@@ -2187,6 +2188,10 @@ skip-link {
     flex-grow: 1;
     flex-wrap: wrap;
     justify-content: flex-end;
+
+    & :--list {
+      justify-content: flex-end;
+    }
   }
 
   & :any-link {
